Alteracao na estrutura do projeto